@@ -26,7 +26,7 @@ elseif strmatch(projectVersion, "%-%d+%-") then
 end
 
 TELLMEWHEN_VERSION_FULL = TELLMEWHEN_VERSION .. " " .. TELLMEWHEN_VERSION_MINOR
-TELLMEWHEN_VERSIONNUMBER = 85201 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL (for versioning of)
+TELLMEWHEN_VERSIONNUMBER = 85202 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL (for versioning of)
 
 TELLMEWHEN_FORCECHANGELOG = 82105 -- if the user hasn't seen the changelog until at least this version, show it to them.
 
@@ -2910,9 +2910,9 @@ function TMW:LockToggle()
 
 	TMW.Locked = TMW.db.profile.Locked
 
-	TMW:Fire("TMW_LOCK_TOGGLED", TMW.db.profile.Locked)
+	TMW:Fire("TMW_LOCK_TOGGLED", TMW.Locked)
 
-	PlaySound(SOUNDKIT and SOUNDKIT.IG_CHARACTER_INFO_TAB or "igCharacterInfoTab") -- SOUNDKIT is patch 7.3 compat
+	PlaySound(SOUNDKIT.IG_CHARACTER_INFO_TAB)
 	TMW:Update()
 end
 
