@@ -1,6 +1,7 @@
 
 ===v8.5.2===
 * Includes latest LibDogTag-Unit with fixes for [SoulShardParts] and others.
+* Updated Guardian icon type for 8.0 Warlock changes.
 
 ===v8.5.1===
 * Changed DR reset duration to 20 seconds from 18 to increase consistency.
